@@ -1,6 +1,7 @@
 ===========================================================================
 5.5
 
+Added: @BeforeGroups/@AfterGroups can live in classes without @Test methods
 Added: DataProvider can now take an ITestContext parameter
 Fixed: Wasn't parsing <selector-class-name> correctly 
 Fixed: Annotation Transformers now work on class-level annotations
